[aliases]
release = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = chaoselasticsearch
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://chaostoolkit.org/drivers/elasticsearch/
    GitHub: issues = https://github.com/Vodafone/chaostoolkit-elasticsearch/issues
    GitHub: repo = https://github.com/Vodafone/chaostoolkit-elasticsearch
description = Elastic Search extension for the Chaos Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Vodafone Systems Team
author_email = gabor.gerencser@vodafone.com
zip_safe = False
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    chaostoolkit-lib~=1.28; python_version >= '3.7'
    chaostoolkit~=1.12
    charset-normalizer~=2.0; python_version >= '3'
    elasticsearch~=7.12
    logzero~=1.7
    python-json-logger~=2.0; python_version >= '3.5'
    requests~=2.27
